# doc-store

./: Cargo.toml  docker-compose.yaml  readme.md
curl/: bucket_create.http  bucket_delete.http  bucket_list.http  file_delete.http  file_download.http  file_upload.http
s3tui/.data/creds/: default
src/: error.rs  main.rs
src/api/: file_api.rs  mod.rs
src/tools/: s3.rs
