[package]
name = "doc-store"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
aws-config = { version = "1.8.12" }
aws-sdk-s3 = { version = "1.119.0" }
thiserror = { version = "2.0.17" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }